# python_practice

./: Nate.java  README.md  combine.py  main.py
collect_research_info/src/: Nate.java
drawing_irrational_numbers/src/: angles.py
equations-to-hdl/: equations-to-hdl.py
markdown-link/: pyproject.toml
markdown-link/src/markdown_link/: link_semantic.py
merge_research_files/: .gitignore  README.md
numpy_basics/: main.ipynb
src/: ChangeBase.py  combine.py  drawingIrrationalNumbers.py  getPi.py  main.py
tkinter/: main.py
